# pg_import

./: .gitignore  README.md  cli.py  db.py  docker-compose.yml  insert.py  pyproject.toml  requirements.txt  run_import.py
pg_import/: __init__.py  __main__.py  cli.py  config.py  db.py  insert.py  io.py
