[tool.poetry]
name = "interview"
version = "0.1.0"
description = ""
authors = ["Gabriel P. <sgaps01@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg = "^3.1.11"
sqlalchemy = "^2.0.21"


[tool.poetry.group.dev.dependencies]
memory-profiler = "^0.61.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
